prusti-tests/tests/verify/ui/predicates/dont-call.stderr
error: [Prusti: invalid specification] using a predicate in non-specification code is not allowed
  --> $DIR/dont-call.rs:13:14
   |
13 |     let _x = pred_id(true);
   |              ^^^^^^^
   |
note: this is a specification-only predicate
  --> $DIR/dont-call.rs:6:5
   |
6  | /     fn pred_id(x: bool) -> bool {
7  | |         x
8  | |     }
   | |_____^

error: [Prusti: invalid specification] using a predicate in non-specification code is not allowed
  --> $DIR/dont-call.rs:35:29
   |
35 |                 illegal_ref(Self::inner_pred)
   |                             ^^^^^^^^^^^^^^^^
   |
note: this is a specification-only predicate
  --> $DIR/dont-call.rs:28:17
   |
28 | /                 fn inner_pred(b: bool) -> bool {
29 | |                     b
30 | |                 }
   | |_________________^

error: [Prusti: invalid specification] using a predicate in non-specification code is not allowed
  --> $DIR/dont-call.rs:43:17
   |
43 |     illegal_ref(pred_id);
   |                 ^^^^^^^
   |
note: this is a specification-only predicate
  --> $DIR/dont-call.rs:6:5
   |
6  | /     fn pred_id(x: bool) -> bool {
7  | |         x
8  | |     }
   | |_____^

error: aborting due to 3 previous errors

